--- a/html5dummy/about.html
+++ b/html5dummy/about.html
@@ -11,7 +11,7 @@
     <body>
 
         <!-- Heading of page -->
-       <h1>Contact</h1>
+       <h1>Thrid Context</h1>
        simple page without padding
        <div>
            <!-- Address as list -->
