--- a/html5dummy/bootstrap.html
+++ b/html5dummy/bootstrap.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- CDN for bootstrap 4 -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/parambootstrap.css" type="text/css" />
 </head>
 
@@ -172,14 +172,82 @@
             <li class="list-group-item">one</li>
             <li class="list-group-item">one</li>
             <li class="list-group-item">one</li>
-            <li class="list-group-item">one</li>            
+            <li class="list-group-item">one</li>
         </ul>
 
-        <div class="list-group">    
+        <div class="list-group">
             <a href="#" class="list-group-item">one</a>
             <a href="#" class="list-group-item list-group-item-primary">one</a>
             <a href="#" class="list-group-item list-group-item-danger">one</a>
             <a href="#" class="list-group-flush">one</a>
+        </div>
+
+        <hr>
+        <div class="alert alert-success" role="alert">This is alert</div>
+        <div class="alert alert-warning" role="alert">this is warning</div>
+        <div class="alert alert-info" role="alert">this is alert info</div>
+        <div class="alert alert-danger alert-dismissibl" role="alert">
+            <button type="button" class="close" data-dismiss="alert"><span>&times;<span></button> you can close
+        </div>
+
+        <!-- Progress bar -->
+
+        <div class="progress">
+            <div class="progress-bar progress-bar-striped bg-warning progress-bar-animated " style="width:50%">
+                60%
+            </div>
+        </div>
+
+        <hr>
+        <div>
+            Email <span class="badge badge-pill badge-primary">23</span> Email <span class="badge badge-pill badge-danger">23</span>            Email <span class="badge badge-pill badge-success">23</span> Email <span class="badge badge-pill badge-warning">23</span>            Email <span class="badge badge-pill badge-dark">23</span> Email <span class="badge badge-pill badge-info">23</span>
+        </div>
+        <br>
+        <div class="row">
+            <div class="col-md-8 col-sm-6">
+                <p>Lorem ipsum dolor sit amet.</p>
+            </div>
+            <div class="col-md-4 col-sm-6">
+                <p>Lorem ipsum dolor sit amet.</p>
+            </div>
+        </div>
+        <br>
+        <div class="row">
+            <div class="col-md-3">
+                <p>Lorem ipsum dolor sit amet.</p>
+            </div>
+            <div class="col-md-3">
+                <p>Lorem ipsum dolor sit amet.</p>
+            </div>
+            <div class="col-md-3">
+                <p>Lorem ipsum dolor sit amet.</p>
+            </div>
+            <div class="col-md-3">
+                <p>Lorem ipsum dolor sit amet.</p>
+            </div>
+        </div>
+        <br>
+        <div class="row">
+            <div class="col-md-6">
+                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis, ipsum! Facere, neque, provident. Amet,
+                    perspiciatis!
+                </p>
+            </div>
+            <div class="col-md-6">
+                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis, ipsum! Facere, neque, provident. Amet,
+                    perspiciatis!
+                </p>
+            </div>
+        </div>
+
+
+    </div>
+
+    <div class="jumbotron text-center">
+        <div class="container">
+            <h1>Welcome param</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            <a href="#" class="btn btn-primary">Read More</a>
         </div>
     </div>
 
