angular with router configuration works

--- a/angularDummy/exercise/documentation/coverage.html
+++ b/angularDummy/exercise/documentation/coverage.html
@@ -117,6 +117,22 @@
         <tr class="low">
             <td>
                 <!-- miscellaneous -->
+                <a href="./classes/Product.html">src/app/domain/model.ts</a>
+            </td>
+            <td>
+                class
+            </td>
+            <td>
+                Product
+            </td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/7)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
                 <a href="./classes/WorkoutPlan.html">src/app/domain/model.ts</a>
             </td>
             <td>
@@ -133,6 +149,70 @@
         <tr class="low">
             <td>
                 <!-- miscellaneous -->
+                <a href="./injectables/ProductServiceService.html">src/app/product-service.service.ts</a>
+            </td>
+            <td>
+                injectable
+            </td>
+            <td>
+                ProductServiceService
+            </td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/3)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./components/ExecrciseDescriptionComponent.html">src/app/workout-runner/execrcise-description/execrcise-description.component.ts</a>
+            </td>
+            <td>
+                component
+            </td>
+            <td>
+                ExecrciseDescriptionComponent
+            </td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/5)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./pipes/SecondToPipePipe.html">src/app/workout-runner/shared/second-to-pipe.pipe.ts</a>
+            </td>
+            <td>
+                pipe
+            </td>
+            <td>
+                SecondToPipePipe
+            </td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/1)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./components/VideoPlayerComponent.html">src/app/workout-runner/video-player/video-player.component.ts</a>
+            </td>
+            <td>
+                component
+            </td>
+            <td>
+                VideoPlayerComponent
+            </td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/7)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
                 <a href="./components/WorkoutRunnerComponent.html">src/app/workout-runner/workout-runner.component.ts</a>
             </td>
             <td>
@@ -143,7 +223,7 @@
             </td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/13)</span>
+                <span class="coverage-count">(0/22)</span>
             </td>
         </tr>
         <tr class="low">
