--- a/angularDummy/exercise/documentation/classes/WorkoutPlan.html
+++ b/angularDummy/exercise/documentation/classes/WorkoutPlan.html
@@ -466,21 +466,21 @@
     <div class="tab-pane fade  tab-source-code" id="c-source">
         <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">export class WorkoutPlan {
   constructor(
-      public name: string,
-      public title: string,
-      public restBetweenExercise: number,
-      public exercises: ExercisePlan[],
-      public description?: string) {
+    public name: string,
+    public title: string,
+    public restBetweenExercise: number,
+    public exercises: ExercisePlan[],
+    public description?: string) {
   }
 
   totalWorkoutDuration(): number {
-      if (!this.exercises) {
-          return 0;
-      }
+    if (!this.exercises) {
+      return 0;
+    }
 
-      const total &#x3D; this.exercises.map((e) &#x3D;&gt; e.duration).reduce((previous, current) &#x3D;&gt; previous + current);
+    const total &#x3D; this.exercises.map((e) &#x3D;&gt; e.duration).reduce((previous, current) &#x3D;&gt; previous + current);
 
-      return (this.restBetweenExercise ? this.restBetweenExercise : 0) * (this.exercises.length - 1) + total;
+    return (this.restBetweenExercise ? this.restBetweenExercise : 0) * (this.exercises.length - 1) + total;
   }
 }
 
@@ -491,13 +491,23 @@ export class ExercisePlan {
 
 export class Exercise {
   constructor(
-      public name: string,
-      public title: string,
-      public description: string,
-      public image: string,
-      public nameSound?: string,
-      public procedure?: string,
-      public videos?: Array&lt;string&gt;) { }
+    public name: string,
+    public title: string,
+    public description: string,
+    public image: string,
+    public nameSound?: string,
+    public procedure?: string,
+    public videos?: Array&lt;string&gt;) { }
+}
+
+export class Product {
+  constructor(public id: number,
+    public city: string,
+    public name: string,
+    public cat?: string,
+    public price?: number) {
+
+  }
 }
 </code></pre>
     </div>
