router capability has added in exercise

--- a/angularDummy/exercise2/src/index.html
+++ b/angularDummy/exercise2/src/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Exercise2</title>
+  <!--it is need for router infrastructure. it act as base url for routing -->
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
