gulp 4 has completed

--- a/gulpDummy/index.html
+++ b/gulpDummy/index.html
@@ -24,6 +24,6 @@
         </p>
       </div>
     </div>
-    <script src="dist/all.js"></script>
+    <script src="dest/all.js"></script>
   </body>
 </html>
